--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ listTestSuite["http://bordercloud.github.io/TFT-tests/sparql11-test-suite/"] = "
 listTestSuite["http://bordercloud.github.io/TFT-tests/GO3/"] = "tests/TFT-tests/GO3/"
 
 [SERVICE]
-;endpoint["http://example.org/sparql"] = "http://dev.grid-observatory.org:8890/tests/"
-;endpoint["http://example1.org/sparql"] = "http://dev.grid-observatory.org:8890/tests1/"
-;endpoint["http://example2.org/sparql"] = "http://dev.grid-observatory.org:8890/tests2/"
+endpoint["http://example.org/sparql"] = "http://onevm-194.lal.in2p3.fr:8095/sparql/"
+endpoint["http://example1.org/sparql"] = "http://onevm-60.lal.in2p3.fr:8095/sparql/"
+endpoint["http://example2.org/sparql"] = "http://onevm-194.lal.in2p3.fr:8095/sparql/"
 
