--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,7 @@ listTestSuite["http://bordercloud.github.io/TFT-tests/sparql11-test-suite/"] = "
 listTestSuite["http://bordercloud.github.io/TFT-tests/GO3/"] = "tests/TFT-tests/GO3/"
 
 [SERVICE]
-endpoint["http://example.org/sparql"] = "http://onevm-194.lal.in2p3.fr:8095/sparql/"
-endpoint["http://example1.org/sparql"] = "http://onevm-60.lal.in2p3.fr:8095/sparql/"
-endpoint["http://example2.org/sparql"] = "http://onevm-194.lal.in2p3.fr:8095/sparql/"
+endpoint["http://example.org/sparql"] = "http://onevm-236.lal.in2p3.fr/sparql/"
+endpoint["http://example1.org/sparql"] = "http://onevm-237.lal.in2p3.fr/sparql/"
+endpoint["http://example2.org/sparql"] = "http://onevm-239.lal.in2p3.fr/sparql/"
 
