--- a/config.ini
+++ b/config.ini
@@ -18,3 +18,8 @@ endpoint["http://example.org/sparql"] = "http://onevm-236.lal.in2p3.fr/sparql/"
 endpoint["http://example1.org/sparql"] = "http://onevm-237.lal.in2p3.fr/sparql/"
 endpoint["http://example2.org/sparql"] = "http://onevm-239.lal.in2p3.fr/sparql/"
 
+;Tests with LOAD
+[LOAD]
+file["http://example.org/faraway"]= "http://bordercloud.github.io/TFT-tests/sparql11-test-suite/add/add-default.ttl"
+file["remote"]= "http://bordercloud.github.io/TFT-tests/sparql11-test-suite/add/add-default.ttl"
+
