--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,7 @@ listTriplestore[] = "allegrograph"
 
 listTestSuite["http://bordercloud.github.io/TFT-tests/sparql11-test-suite/"] = "tests/TFT-tests/sparql11-test-suite/"
 listTestSuite["http://bordercloud.github.io/TFT-tests/GO3/"] = "tests/TFT-tests/GO3/"
+listTestSuite["http://bordercloud.github.io/TFT-tests/geosparql/"] = "tests/TFT-tests/geosparql/"
 
 [SERVICE]
 endpoint["http://example.org/sparql"] = "http://onevm-72.lal.in2p3.fr/sparql/"
