--- a/config.ini
+++ b/config.ini
@@ -15,9 +15,9 @@ listTestSuite["http://bordercloud.github.io/TFT-tests/GO3/"] = "tests/TFT-tests/
 listTestSuite["http://bordercloud.github.io/TFT-tests/geosparql/"] = "tests/TFT-tests/geosparql/"
 
 [SERVICE]
-endpoint["http://example.org/sparql"] = "http://onevm-72.lal.in2p3.fr/sparql/"
-endpoint["http://example1.org/sparql"] = "http://onevm-73.lal.in2p3.fr/sparql/"
-endpoint["http://example2.org/sparql"] = "http://onevm-75.lal.in2p3.fr/sparql/"
+endpoint["http://example.org/sparql"] = "http://172.21.12.27/sparql/"
+endpoint["http://example1.org/sparql"] = "http://172.21.13.90/sparql/"
+endpoint["http://example2.org/sparql"] = "http://172.21.14.51/sparql/"
 
 ;Tests with LOAD
 [LOAD]
