--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,8 @@ listTestSuite["http://bordercloud.github.io/rdf-tests/sparql11/data-sparql11/"] 
 listTestSuite["http://bordercloud.github.io/TFT-tests/GO3/"] = "tests/TFT-tests/GO3/"
 listTestSuite["http://bordercloud.github.io/TFT-tests/geosparql/"] = "tests/TFT-tests/geosparql/"
 
+jmeter = "./jmeter/bin/jmeter"
+
 [SERVICE]
 endpoint["http://example.org/sparql"] = "http://172.17.0.3:8890/sparql/"
 endpoint["http://example1.org/sparql"] = "http://172.17.0.4:8890/sparql/"
