--- a/config.ini
+++ b/config.ini
@@ -10,9 +10,9 @@ listTriplestore[] = "fuseki"
 listTriplestore[] = "virtuoso"
 listTriplestore[] = "allegrograph"
 
-listTestSuite["http://bordercloud.github.io/rdf-tests/sparql11/data-sparql11/"] = "tests/rdf-tests/sparql11/data-sparql11/"
-listTestSuite["http://bordercloud.github.io/TFT-tests/GO3/"] = "tests/TFT-tests/GO3/"
-listTestSuite["http://bordercloud.github.io/TFT-tests/geosparql/"] = "tests/TFT-tests/geosparql/"
+listTestSuite["https://bordercloud.github.io/rdf-tests/sparql11/data-sparql11/"] = "tests/rdf-tests/sparql11/data-sparql11/"
+listTestSuite["https://bordercloud.github.io/TFT-tests/GO3/"] = "tests/TFT-tests/GO3/"
+listTestSuite["https://bordercloud.github.io/TFT-tests/geosparql/"] = "tests/TFT-tests/geosparql/"
 
 jmeter = "./jmeter/bin/jmeter"
 
